--- a/kiga.webapi/appsettings.json
+++ b/kiga.webapi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings":{
-    "DefaultConnection": "Data Source=.\\SqlExpress;Initial Catalog=KigaBanco;user id=sa;password=senai@123"
+    "DefaultConnection": "Data Source=den1.mssql5.gear.host;Initial Catalog=BancoKiga;user id=bancokiga;password=Sq8xB_h2!TcL"
   },
   "Logging": {
     "IncludeScopes": false,
